# ship-slow-regret-faster

./: .gitignore  README.md  setup.md
1-build/: README.md  TICKETMASTER_SETUP.md  TOOL_IDEAS.md  pyproject.toml
1-build/exercise-notes-server/: README.md  pyproject.toml  simple_notes.py
1-build/local_discovery/: GOOGLE_PLACES_SETUP.md  README.md  google_searchtext_response.json  local_discovery.py
2-break/: README.md  SOLUTIONS.md
2-break/01-oops-that-was-private/: README.md
2-break/02-deputy-in-the-middle/: README.md
3-defend/: README.md
break/: Dockerfile  README.md  docker-compose.yml  requirements.txt
break/03-looks-legit-to-me/: README.md
break/04-name-your-poison/: README.md
break/05-behind-the-curtain/: README.md
break/06-forward-thinking/: README.md
break/app/: __init__.py  main.py
break/app/scenarios/: __init__.py  naming_attack.py  prompt_injection.py  tool_chaining.py
break/app/templates/: index.html  scenario.html
defend/: detailed_threat_model
