[project]
name = "local-discovery"
version = "0.1.0"
description = "MCP server that helps you discover local restaurants, events, and activities in your area, get reviews, and summarize recommendations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.0.0",
    "requests==2.32.5",
]
